[package]
name = "md-icons-helper"
version = "0.2.1"
edition = "2021"
description = "Helper library for md-icons"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "0", optional = true }

[features]
maud = [ "dep:maud" ]

[lib]
proc-macro = true
