[package]
name = "md-icons"
version = "0.2.1"
edition = "2021"
description = "Crate for material design icons as string constants"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-icons-helper = { path = "../md-icons-helper", version = "0.2.0" }
maud = { version = "0", optional = true }

[features]
maud = [ "dep:maud", "md-icons-helper/maud" ]
