[package]
name = "md-icons"
version = "0.2.2"
edition = "2021"
description = "Crate for material design icons as string constants"
license = "MIT"
authors = [ "Fionn Langhans <fionn.langhans@gmail.com" ]
repository = "https://github.com/codefionn/md-icons-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-icons-helper = { path = "../md-icons-helper", version = "0.2.0" }
maud = { version = "0", optional = true }

[features]
maud = [ "dep:maud", "md-icons-helper/maud" ]
