[package]
name = "md-icons"
version = "0.3.0"
edition = "2021"
description = "Crate for material design icons as string constants"
license = "MIT"
authors = [ "Fionn Langhans <fionn.langhans@gmail.com" ]
repository = "https://github.com/codefionn/md-icons-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "0", optional = true }
leptos = { version = "0", optional = true }
md-icons-helper = { path = "../md-icons-helper", version = "0.3.0" }

[features]
maud = [ "dep:maud", "md-icons-helper/maud" ]
leptos = [ "dep:leptos", "md-icons-helper/leptos" ]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
md-icons = { path = ".", features = ["maud", "leptos"] }
